lots of changes

--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -26,3 +26,8 @@
  	:mouseover => "/images/text/Nominate_a_Farmer_mouseover.png" ), new_nomination_path %></p>
 
 <div id="mainmap"><%= @map.div :width => 700, :height => 420 -%></div>
+
+<% content_for(:sidebar) do %>
+  <p>The Greenhorns would like to thank Organic Valley for their generous sponsorhisp of Serve Your Country Food.</p>
+	<%= textilize h(Page.find_by_permalink('sponsors').content) %>
+<% end %>
