--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
  "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-  <title>Narrative on Young American Farmers - <%= yield(:title) || "Greenhorns" %></title>
+  <title>Serve your country food - <%= yield(:title) || "Greenhorns" %></title>
   <%= stylesheet_link_tag 'reset-fonts-grids' %>
 	<%= stylesheet_link_tag 'styles' %>			
 	<%= javascript_include_tag :defaults %>
@@ -12,31 +12,21 @@
 <div id="doc4" class="yui-t3">
 
   <div id="hd" class="header">
-		<h1><%= link_to image_tag("/images/text/Narrative_on_Young_American_Farmers.gif",
-						:title => "Narrative on Young American Farmers", 
-						:id =>"Narrative_on_Young_American_Farmers", 
-						:alt => "Narrative on Young American Farmers"), home_path %> 
-						<%= image_tag("/images/farm_tools_small.png") %> </h1>  
+		<h1><%= link_to image_tag("/images/serve_your_country_food.png",
+						:title => "Serve your country food", 
+						:id =>"Serve_your_country_food", 
+						:alt => "Serve your country food"), home_path %>  <%# TODO: add handdrawn banner from brooke %>
+						<%= image_tag("/images/farm_tools.png") %> </h1>  
 	  <%= image_tag("hr_gray_875x25.png") %>
 	</div> <!-- hd end -->
 
   <div id="bd">
-
     <div class="yui-g navigation">
-     	<%= link_to image_tag("/images/text/Home.png", 
-									:title => "Home", 
-									:alt => "Home",
-									:mouseover => "/images/text/Home_mouseover.png"), home_path %> 
-			<%= image_tag("/images/text/pipe.png", :alt => "|") %>									
-			<%= link_to image_tag("/images/text/About_this_site.png", 
-									:title => "About this site", 
-									:alt => "About this site",
-									:mouseover => "/images/text/About_this_site_mouseover.png"), static_path("about") %>
-      <%= image_tag("/images/text/pipe.png", :alt => "|") %>									     								 
-			<%= link_to image_tag("/images/text/Sponsors.png", 
-									:title => "Sponsors", 
-									:alt => "Sponsors",
-									:mouseover => "/images/text/Sponsors_mouseover.png"), static_path("sponsors") %>									
+     	<%= link_to image_tag("/images/text/Home.png", :title => "Home", :alt => "Home", :mouseover => "/images/text/Home_mouseover.png"), home_path %> 
+			<% Page.find(:all).each do |page| %>
+				<%= image_tag("/images/text/pipe.png", :alt => "|") %>									
+				<%= link_to image_tag(page.label, :title => page.name, :alt => page.name, :mouseover => mouseover_file(page.label)), static_path(page.permalink) %>
+			<% end %>
     </div> <!-- yui-g navigation end -->
 
     <div class="yui-ge">
@@ -49,7 +39,7 @@
 			
       <div class="yui-u"> 
 				<div class ='sidebar'>
-					<%= yield( :sidebar ) || render(:partial => "/layouts/default_sidebar_content")%> 
+					<%= yield(:sidebar ) || render(:partial => "/layouts/default_sidebar_content") %> 
 				</div> <!-- sidebar end -->
 			</div> <!-- yui-u second -->
 			
