--- a/app/views/stages/_answer.html.erb
+++ b/app/views/stages/_answer.html.erb
@@ -1,19 +1,20 @@
 <% fields_for "survey[answer_attributes][]", answer do |answer_form| -%>
-	<%= h answer.question.text %> 
 
+	<%= image_tag("#{answer.question.title_label}", :alt => "#{answer.question.text}", :title => "#{answer.question.text}") %>
+	
   <%- if answer.question.qtype == "text_field" or answer.question.qtype == "text_area" -%>
     <br/><%= answer_form.send("#{answer.question.qtype}", :text, :id => "#{answer.question.text}", :rows => 3) %>
   <%- elsif answer.question.qtype == "list"  -%>
     <%- for option in answer.question.options -%>
 			<br/> <%= check_box_tag( "survey[answer_attributes][#{answer.id}][option_ids][]", 
-										option.id, answer.options.include?(option), 
-										:id => option.text  ) %> <%= "#{option.text}" %> 
+										option.id, answer.options.include?(option), :id => option.text  ) %> 
+						<%= image_tag "#{option.filename}", :alt => "#{option.text}" %> 
     <%- end -%>
   <%- elsif answer.question.qtype == "options" or answer.question.qtype == "yes_no" -%>
   	<%- for option in answer.question.options -%>
 			<br/> <%= radio_button_tag( "survey[answer_attributes][#{answer.id}][option_ids][]", 
-										option.id, answer.options.include?(option), 
-										:id => option.text ) %> <%= "#{option.text}" %> 
+										option.id, answer.options.include?(option), :id => option.text ) %> 
+						<%= image_tag "#{option.filename}", :alt => "#{option.text}" %> 
     <%- end -%>
 	<%- end -%>
   <hr/>
