--- a/app/views/stages/index.html.erb
+++ b/app/views/stages/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Census Stages</h1>
 
-	<% content_for :sidebar do -%>
+	<% content_for :footer do -%>
 		<div id="images">
 			<% show_avatars do |image| %>
 				<%= image_tag "#{image}" %>
