--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -1,5 +1,5 @@
 body { background-color:#F1F7D4;}
-#doc2 { background-color: #FFF; text-align: center;} /*950px centerd*/
+#doc2 { background-color: #FFF; text-align: center; width:950px;} /*950px centerd*/
 #hd, #ft { background-color : #FFF; color: #FFF; height:270px; border:none; }
 #hd h1 { font-size: 210%; padding-left: 10px;}
 #hd img {vertical-align:middle;} /* added */
@@ -147,4 +147,4 @@ display:none;
 
 #first_name {float:left;}
 
-.mainmap{ width:950px; padding-left:100px; padding-right:100px; padding-bottom:20px;} /* */
+.mainmap{ width:800px; padding-left:75px; padding-right:75px; padding-bottom:20px;} /* 950 = 800+75+75 ?? 950-750 = 200*/
