--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -12,6 +12,7 @@
       #container2
         #navigation
           %ul
+            %li= link_to "Pages", pages_path
             %li= link_to "Surveys", surveys_path
             %li= link_to "Nominations", nominations_path
             %li= link_to "Farmers", farmers_path
