--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
 			<% end %>
     </div> <!-- yui-g navigation end -->
 
-    <div class="yui-g">
+    <div class="yui-g middle">
 			  <p style="color: red"><%= flash[:error] %></p>
 			  <p style="color: green"><%= flash[:notice] %></p>
 	 			<%= yield %> 			
@@ -36,6 +36,10 @@
       <%= yield(:map) %>
     </div> <!-- yui-g -->    
 
+    <div class="yui-g middle">
+      <%= yield(:lower_half) %>      
+    </div>  
+    
 	  <div id="ft"> 
 			<div class="yui-g footer">
 				<div class ='sidebar'>
