--- a/public/stylesheets/admin.css
+++ b/public/stylesheets/admin.css
@@ -40,6 +40,7 @@ div#banner
 	color: #fff;
 	background-color: #333;
 	border-bottom: 1px solid #000;
+	padding:5px 4% 10px;
 }
 
 div#banner h1
@@ -52,13 +53,13 @@ div#banner h1
 
 div#container
 {
-	background-image: url(nav_col_base.jpg);
+	background-image: url(../images/nav_col_base.jpg);
 	background-repeat: repeat-y;
 }
 
 div#container2
 {
-	background-image: url(more_col_base.jpg);
+	background-image: url(../images/more_col_base.jpg);
 	background-repeat: repeat-y;
 	background-position: right;
 }
@@ -86,7 +87,7 @@ div#navigation ul li { margin-top: 4px; }
 	padding: 3px 5px 3px 10px;
 	text-decoration: none;
 	color: #000;
-	background-image: url(nav_base.jpg);
+	background-image: url(../images/nav_base.jpg);
 	background-repeat: repeat-y;
 }
 
@@ -94,7 +95,7 @@ div#navigation ul li { margin-top: 4px; }
 {
 	color: #fff;
 	background-color: #ccc;
-	background-image: url(nav_base2.jpg);
+	background-image: url(../images/nav_base2.jpg);
 	background-repeat: repeat-y;
 }
 
@@ -112,7 +113,7 @@ div#more h3
 	margin-top: 0;
 	color: #fff;
 	padding: .2em;
-	background-image: url(more_base.jpg);
+	background-image: url(../images/more_base.jpg);
 	background-position: right;
 	background-repeat: repeat-y;
 }
@@ -159,4 +160,31 @@ div#footer li
 {
 	display: inline;
 	margin-right: 1em;
+}
+
+#banner ul#nav{
+	float:right;
+	list-style-type:none;
+	margin:1em 0 0;
+}
+
+#banner ul#nav li {
+	color:gold;
+	float:left;
+	font-family:'Lucida Grande',Verdana,Arial,Helvetica,sans-serif;
+	font-size:0.7em;
+	margin-left:2em;
+}
+
+#banner ul#nav li a {
+	color:#AA8866;
+	display:block;
+	float:left;
+}
+#banner ul#nav li.active a {
+	color:#CCAA88;
+	font-weight:bold;
+}
+#banner ul#nav li.hot a {
+	color:orange;
 }
