modified the layouts for publin and admin site

--- a/app/views/admin/index.haml
+++ b/app/views/admin/index.haml
@@ -1,9 +1,4 @@
 
-%ul
-  %li= link_to "Surveys", surveys_path
-  %li= link_to "Nominations", nominations_path
-  %li= link_to "Farmers", farmers_path
-  %li= link_to "Farms", "farms_path"
 
 %p Recent Surveys
 - Survey.recent.each do |s|
@@ -11,9 +6,11 @@
   %br
     
 %p Recent Nominations
-%p Recent Farmers
-%p Recent Farms
+- Nomination.recent.each do |n|
+  = link_to "Nomination of #{n.first_name} by #{n.your_name}", nomination_path(n) 
+  %br
+
 %p Public Farmer Profiles
 %p Private Farmer Profiles
 %p Farmers Contacted
-%p Farmers Not Yet Contacted  
+%p Farmers Not Contacted  
