--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -3,7 +3,6 @@
 <%= javascript_include_tag 'mapping_helpers' %>
 
 <p>
-  <div id="content">
   <table>
     <tr><td>
 
@@ -20,11 +19,9 @@
 
     </td></tr>
   </table>
-
-  </div>
 </p>
 
-<div id="content">
+<div>
   Its a website, its a portal, its a map, its a database, its an expression of profound patriotism.
   Here, represented by little dots on this map. We are the young farmers of America.  
 </div>
@@ -34,7 +31,7 @@
 <% end %>
 
 <% content_for(:lower_half) do %>
-  <div id="content">
+  <div>
     United in our commitment to soil fertility, local nutrition, national health and a yummy hereafter.
     Land. Liberty. Stamina. Sunshine. These are the natural ingredients for an edible future.
   </div>   
