--- a/app/views/nominations/new.html.erb
+++ b/app/views/nominations/new.html.erb
@@ -1,5 +1,3 @@
-<center>
-<div id="content">
 <%= image_label("New_Nomination") %>
 
 <% form_for(@nomination) do |f| %>
@@ -27,7 +25,7 @@
   </p>
   <p>
     <%= image_label "telephone2" %>
-    <%= f.text_field :telephone_no %>
+    <%= f.text_field :telephone_no, :size => 30  %>
   </p>
   <p>
     <%= image_label "date_of_birth" %>
@@ -59,5 +57,3 @@
 <% end %>
 
 <%= link_to 'Back', nominations_path %>
-</div>
-</center>
