--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -1,21 +1,25 @@
-<center>
-<div id="content">
-<h1>Editing page</h1>
+<h2>Editing page</h2>
 <% form_for(@page) do |f| %>
   <%= f.error_messages %>
 
   <p>
     <%= f.label :name %><br />
     <%= f.text_field :name, :size => 40 %>
-  </p>
+  </p>    
+  
   <p>
     <%= f.label :permalink %><br />
     <%= f.text_field :permalink, :size => 40 %>
   </p>
+
   <p>
-    <%= f.label :content %> <i><small>(Formating Help <%= link_to "Textile", "http://textism.com/tools/textile/", :popup => true %>)</small></i><br />
+    <%= f.label :content %> 
+    <i><small>(Formating Help 
+                <%= link_to "Textile", "http://textism.com/tools/textile/", 
+                      :popup => true %>)</small></i><br />
     <%= f.text_area :content, :cols => 60, :rows => 20 %>
   </p>
+
   <p>
     <%= f.submit "Update" %>
   </p>
@@ -23,6 +27,3 @@
 
 <%= link_to 'Show', @page %> |
 <%= link_to 'Index', pages_path %>
-<p/>
-</div>
-</center>
