fixing up map control

--- a/app/views/stages/_address.html.erb
+++ b/app/views/stages/_address.html.erb
@@ -40,6 +40,8 @@
 
 </script>
 
+<span id="lat_display"></span> <span id="lng_display"></span>
+
 <div id="map_canvas" style="width: 640px; height: 320px" ></div>
 
 <div class="form_row">
