midway through the new labels

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -19,7 +19,7 @@
 
   %bd
     .yui-g.navigation
-     	= link_to image_label_mouseover("text/Home.png"), home_path
+     	= link_to image_label_no_mouseover("text/home.png"), home_path
 			-Page.find(:all).each do |page|
 				= image_tag("text/pipe.png", :alt => "|")
 				= link_to image_label_mouseover(page.label), static_path(page.permalink)
