--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -9,13 +9,12 @@
     	<% if session[:current_survey].nil? %>
     		<%= link_to image_label_mouseover("/images/text/center/Take_the_Survey.png"), url_for(Stage.find(:first)) %>
     	<% else %>	
-      	<%= image_label_no_mouseover("/images/text/Survey_in_progress.png") %> <br/>
-    		<%= link_to image_label_mouseover("/images/text/Please_Continue.png"), stages_path %>
+      	<%= link_to image_label_no_mouseover("/images/text/survey_in_progress.png"), stages_path %>
     	<% end %>
 
     </td><td width="100px"></td><td valign="top">
 
-    	<%= link_to image_label_mouseover("/images/text/Nominate_a_Farmer.png"), new_nomination_path %>
+    	<%= link_to image_label_no_mouseover("/images/text/nominate_a_farmer.png"), new_nomination_path %>
 
     </td></tr>
   </table>
