--- a/app/views/stages/_answer.html.erb
+++ b/app/views/stages/_answer.html.erb
@@ -7,6 +7,8 @@
 
   <%- if answer.question.qtype == "text_field" or answer.question.qtype == "text_area" or answer.question.qtype == "hidden_field" -%>
     <%= answer_form.send("#{answer.question.qtype}", :text, :id => "#{answer.question.text}", :rows => 3) %>
+  <%- elsif answer.question.qtype == "numeric_field" -%>
+    <%= answer_form.send("text_field", :text, :id => "#{answer.question.text}", :size => 6) %>
   <%- elsif answer.question.qtype == "list"  -%>
     <%- for option in answer.question.options -%>
 			 <%= check_box_tag( "survey[answer_attributes][#{answer.id}][option_ids][]", 
@@ -22,7 +24,7 @@
 	<%- end -%>
 
 	<%- unless answer.question.qtype == "hidden_field" %>
- 	 <hr/>
+ 	 <br/>
 	<%- end -%>
 
 <% end -%>
