--- a/app/views/stages/_header.html.erb
+++ b/app/views/stages/_header.html.erb
@@ -3,9 +3,8 @@
 <br/>
 <br/>
 <br/>
-<h2><%= stage.title %></h2>
 <%- if not stage.title_label.nil? -%>
-	<%= image_tag("#{stage.title_label}") %>
+	<%= image_tag("#{stage.title_label}", {:alt => stage.title}) %>
 <%- else -%>
 	<%= image_tag("/images/labels/missing_small.png") %>
 <%- end -%>
