--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -3,6 +3,7 @@
   %head
     %title Admin Dashboard
     = stylesheet_link_tag 'admin'
+    = javascript_include_tag :defaults 
   %body
     #banner
       %ul{:id => 'nav'}
