--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -2,5 +2,8 @@
 	Name of farm: <%= survey.farm_name  %> <br/>
 	Full Address: <%= survey.full_address %> <br/>
 	Lng, Lat: <%= survey.lng %>, <%= survey.lat %> <br/> 
+	Make Public? <%= check_box_tag "make_public", "#{survey.id}", survey.public? %> 
+  <%= observe_field("make_public", :frequency => 1, :url => {:action => "toggle_public"}, :with => "'id='+#{survey.id}" ) %>
+  
 	<hr/>
 <% end %>
