add pagination for survey and nomination lists, add a view to show the contents of a survey in the admin interface, add extra gem deps in environment.rb, add db/schema.rb to source control

--- a/app/views/nominations/index.html.haml
+++ b/app/views/nominations/index.html.haml
@@ -4,3 +4,4 @@
   %p= link_to "#{nomination.first_name} was nomicated by #{nomination.your_name}" , nomination_path(nomination)  
   %br 
 
+<%= will_paginate @nominations %>
