added public profiles page and filter to verify the survey is publically viewable

--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -1,5 +1,5 @@
 <%= GMap.header %>
-<%= show_maps Survey.find(:all)  %>
+<%= show_maps Survey.find_public %>
 <%= javascript_include_tag 'mapping_helpers' %>
 
 <p>
