--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -2,15 +2,20 @@
   Survey by <%= @survey.farmer_name %> from <%= @survey.farm_name %>
 </h1>
 
-<table border="1">
+<%- if admin? -%>
+  Make Public? <%= check_box_tag "make_public", "#{@survey.id}", @survey.public? %> 
+  <%= observe_field("make_public", :frequency => 1, :url => {:action => "toggle_public"}, :with => "'id='+#{@survey.id}" ) %>  
+<%- end -%>
+
+<table class='profile'>
   <tr>
-    <td>Question</td>
-    <td>Answer</td>
+    <th class='profile'>Question</th>
+    <th class='profile'>Answer</th>
   </tr>
   <% @survey.answers.each do |answer| %>
-    <tr>
-      <td><%= answer.question.text %></td>
-      <td>
+    <tr class="<%= cycle('darker', 'lighter') %>">
+      <td class='profile'><%= answer.question.text %></td>
+      <td class='profile'>
         <% if answer.text? %>
           <%= answer.text %>
         <% elsif !answer.options.blank? %>
