--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -563,3 +563,10 @@ div.directory span.current
   padding-left:100px; 
 	padding-right:100px;    	
 }
+
+tr.darker { background-color: #cccccc; }
+tr.lighter { background-color: #f7f7f7; }
+table.profile { text-align: left; border: 1px solid silver; font-size: 1em; width: 100%; margin: 2px; }
+td.profile { padding: 0.3em; }
+tr.profile { border: 1px solid silver; }
+th.profile { padding: 0.3em; }
