fixed the filter to make sure it doesn't check for public if you are admin

--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -13,7 +13,7 @@
     <th class='profile'>Answer</th>
   </tr>
   <% @survey.answers.each do |answer| %>
-    <tr class="<%= cycle('darker', 'lighter') %>">
+    <tr class="<%= cycle('profile darker', 'profile lighter') %>">
       <td class='profile'><%= answer.question.text %></td>
       <td class='profile'>
         <% if answer.text? %>
