--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -1,6 +1,7 @@
 <%= GMap.header %>
 <%= show_maps Survey.find(:all)  %>
 <%= javascript_include_tag 'mapping_helpers' %>
+<%= javascript_include_tag 'HtmlControl' %>
 
 <p>
   <table>
