--- a/app/views/stages/_answer.html.erb
+++ b/app/views/stages/_answer.html.erb
@@ -13,13 +13,13 @@
     <%- for option in answer.question.options -%>
 			 <%= check_box_tag( "survey[answer_attributes][#{answer.id}][option_ids][]", 
 										option.id, answer.options.include?(option), :id => option.text  ) %> 
-						<%= image_tag "#{option.filename}", :alt => "#{option.text}" %> 
+						<%= image_tag "#{option.filename}", :alt => "#{option.text}" %> <br/>
     <%- end -%>
   <%- elsif answer.question.qtype == "options" or answer.question.qtype == "yes_no" -%>
   	<%- for option in answer.question.options -%>
 			 <%= radio_button_tag( "survey[answer_attributes][#{answer.id}][option_ids][]", 
 										option.id, answer.options.include?(option), :id => option.text ) %> 
-						<%= image_tag "#{option.filename}", :alt => "#{option.text}" %> 
+						<%= image_tag "#{option.filename}", :alt => "#{option.text}" %> <br/>
     <%- end -%>
 	<%- end -%>
 
