--- a/app/views/layouts/admin.haml
+++ b/app/views/layouts/admin.haml
@@ -29,5 +29,6 @@
     #footer
       =yield(:footer)       
       %ul
+      -if admin? 
         %li= link_to "logout (public site)", logout_path() 
         
