--- a/app/views/stages/_address.html.erb
+++ b/app/views/stages/_address.html.erb
@@ -25,8 +25,10 @@
   var pointCenter = new GLatLng(37.7185903255881,-99.052734375);	
 	map.setCenter(pointCenter,4);
 	
- 	<%- unless @current_survey.lat.nil? or  @current_survey.lat.nil? -%>
-  	create_draggable_marker_for_edit(<%= @current_survey.lng.to_f %>, <%= @current_survey.lat.to_f %>);
+ 	<%- unless @current_survey.lat.nil? or  @current_survey.lng.nil? -%>
+  	create_draggable_marker_for_edit(
+  	    <%= @current_survey.lng.to_f %>, <%= @current_survey.lat.to_f %>
+  	);
 	  pointCenter = new GLatLng(<%= @current_survey.lat.to_f %>,<%= @current_survey.lng.to_f %>);	
 		map.setCenter(pointCenter,5);
 	<%- end -%>
