--- a/app/views/stages/_header.html.erb
+++ b/app/views/stages/_header.html.erb
@@ -1,8 +1,4 @@
-<%= complex_bar_graph [progress_bar(stage)] %>
-<br/>
-<br/>
-<br/>
-<br/>
+<%# complex_bar_graph [progress_bar(stage)] %>
 <%- if not stage.title_label.nil? -%>
 	<%= image_tag("#{stage.title_label}", {:alt => stage.title}) %>
 <%- else -%>
