--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -570,3 +570,22 @@ table.profile { text-align: left; border: 1px solid silver; font-size: 1em; widt
 td.profile { padding: 0.3em; }
 tr.profile { border: 1px solid silver; }
 th.profile { padding: 0.3em; }
+
+.notice {    
+	color: #666;
+	background: #FFF6BF;
+	border-top: 2px solid #FFD324;
+	border-bottom: 2px solid #FFD324;
+	text-align: center;
+	margin: 10px auto;
+	padding: 5px 20px;
+}
+
+.error {
+	background: #FFF6BF;
+	border-top: 2px solid #FFD324;
+	border-bottom: 2px solid #FFD324;
+	text-align: center;
+	margin: 10px auto;
+	padding: 5px 20px;
+}
