--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,8 +27,11 @@
     </div> <!-- yui-g navigation end -->
 
     <div class="yui-g middle">
-			  <p style="color: red"><%= flash[:error] %></p>
-			  <p style="color: green"><%= flash[:notice] %></p>
+      <% [:error, :warning, :notice].each do |level|
+          if flash[level] -%>
+            <div class="flash <%= level.to_s -%>"><%= flash[level] -%></div>
+        <% end -%>
+      <% end -%>
 	 			<div id="content"><%= yield %></div> 			
     </div>  <!-- yui-g -->
 
