added clustering, new markers, difference colored markers based on weather the farmers is grounded (green) or nomadic (red); LINKS in textile also fixed yaygit add .

--- a/app/views/front_page/show.html.erb
+++ b/app/views/front_page/show.html.erb
@@ -1,7 +1,8 @@
 <%= GMap.header %>
 <%= show_maps Survey.find_public %>
-<%= javascript_include_tag 'mapping_helpers' %>
-<%= javascript_include_tag 'HtmlControl' %>
+<%= javascript_include_tag  'mapping_helpers'  %>
+<%= javascript_include_tag  'HtmlControl'      %>
+<%= javascript_include_tag  'clusterer'        %>
 
 <p>
   <table>
