--- a/app/views/pages/edit.html.erb
+++ b/app/views/pages/edit.html.erb
@@ -14,9 +14,9 @@
 
   <p>
     <%= f.label :content %> 
-    <i><small>(Formating Help 
+    <em><small>(Formating Help 
                 <%= link_to "Textile", "http://textism.com/tools/textile/", 
-                      :popup => true %>)</small></i><br />
+                      :popup => true %>)</small></em><br />
     <%= f.text_area :content, :cols => 60, :rows => 20 %>
   </p>
 
