--- a/app/views/surveys/index.html.erb
+++ b/app/views/surveys/index.html.erb
@@ -1,5 +1,6 @@
 <% for survey in @surveys %>
-  <%= link_to "Survey by #{survey.farmer_name} from #{survey.farm_name}", survey_path(survey) %> <br/>
+  <p><%= link_to "Survey by #{survey.farmer_name} from #{survey.farm_name}", survey_path(survey) %></p>
+  <p>User email: <%= survey.email %></p>  
 	Make Public? <%= check_box_tag "make_public", "#{survey.id}", survey.public? %> 
   <%= observe_field("make_public", :frequency => 1, :url => {:action => "toggle_public"}, :with => "'id='+#{survey.id}" ) %>  
 	<hr/>
