--- a/app/views/surveys/show.html.erb
+++ b/app/views/surveys/show.html.erb
@@ -1,6 +1,7 @@
 <h1>
   Survey by <%= @survey.farmer_name %> from <%= @survey.farm_name %>
 </h1>
+<h3>User email: <%= @survey.email %></h3>
 
 <%- if admin? -%>
   Make Public? <%= check_box_tag "make_public", "#{@survey.id}", @survey.public? %> 
