--- a/app/views/stages/_answer.html.erb
+++ b/app/views/stages/_answer.html.erb
@@ -11,9 +11,12 @@
     <%= answer_form.send("text_field", :text, :id => "#{answer.question.text}", :size => 6) %>
   <%- elsif answer.question.qtype == "list"  -%>
     <%- for option in answer.question.options -%>
+			<table><tr><td valign="middle">
 			 <%= check_box_tag( "survey[answer_attributes][#{answer.id}][option_ids][]", 
-										option.id, answer.options.include?(option), :id => option.text  ) %> 
+										option.id, answer.options.include?(option), :id => option.text  ) %>
+			</td><td>&nbsp;&nbsp;&nbsp;<td> 
 						<%= image_tag "#{option.filename}", :alt => "#{option.text}" %> <br/>
+			</td></tr></table>
     <%- end -%>
   <%- elsif answer.question.qtype == "options" or answer.question.qtype == "yes_no" -%>
   	<%- for option in answer.question.options -%>
